app/static/css/dashboard.css
.popUp {
    display: none;
    flex-direction: column;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
}

.popUp:target {
    display: flex;
}

.close-popup-btn {
    position: fixed;
    padding: 10px;
    color: #333;
    border: none;
    font-size: 25px;
    cursor: pointer;
    color: #888;

   &:hover {
        text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
        color: #333;
        transform: scale(1.1);
    } 

    &:active {
        color: #93ebeb;
    }
}

.dashboard-container {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 50px;
}


.links-grid-wrapper {
    background-color: var(--bg-color);
    padding: 0.5rem;
    border-radius: 20px;
    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
    width: 100%;
    max-width: 60%;
    gap: 30px;
    border: 3px solid #1fabad ;
}

.grid {
    background-color: #e9fbfb;
    border-radius: 0 0 15px 15px;
    max-height: 60vh;
    overflow: auto;
    padding: 1rem;
}

.links-header {
    display: grid;
    grid-template-columns: 6% 20% 48% 5% 5% 5%;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
    background-color: var(--primary-color);
    border-radius: 15px 15px 0 0;
    color: white;
    font-size: 1.2rem;
    font-weight: bold;
    text-align: center;

    >button {
        justify-content: flex-end;
        border: none;
        background-color: transparent;
        font-size: 1.2rem;
        padding: 0;

        >i {
            color: white;
            font-size: 1.4rem;
            &:hover {
                color: #93ebeb;
                transform: scale(1.1);
            }
        }
        
        &:active {
            transform: scale(0.95);
            color: #93ebeb;
        }
    }
}

.links-grid {
    display: grid;
    grid-template-columns: 6% 20% 48% 5% 5% 5%;
    padding-bottom: 1rem;
    align-items: center;
    justify-content: space-between;

    >a:hover {
        text-decoration: underline;
    }
}

.grid-element {
    border: 1px solid #d1e2d9;
    border-radius: 10px;
    padding: 15px;
    background-color: white;
    font-size: 0.95rem;
    font-weight: bold;
    cursor: pointer;
    text-align: center;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s, box-shadow 0.2s;
    text-decoration: none;
    text-overflow: ellipsis;
    color: var(--text-color);

}

.grid-element[type='text']:focus {
    outline: none;
    border: 2px solid #2cb6fb;
}

.grid-element:hover {
    transform: scale(1.02);
}

.grid-button {
    color: white;
    border-radius: 50%;
    font-weight: bold;
    border: none;
    width: 40px;
    height: 40px;
    font-size: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s, box-shadow 0.2s;
}

.grid-button:hover {
    transform: scale(1.1);
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

/* Adattamenti per dispositivi medi */
@media (max-width: 1024px) {
    .dashboard-container {
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .links-grid-wrapper {
        max-width: 90%;
    }
}

/* Adattamenti per dispositivi piccoli (tablet e smartphone) */
@media (max-width: 540px) {
    .links-grid-wrapper {
        max-width: 80%;
    }

    .links-header {
        grid-template-columns: 10% 30% 50% 5%;
        padding: 0.5rem 1rem 0.5rem;
        gap: 0.5rem;
        font-size: 0.9rem;
    }

    .links-grid {
        grid-template-columns: 10% 25% 60%;
        padding: 0.5rem 0 0.5rem;
        gap: 0.5rem;
        font-size: 0.9rem;
    }

    .links-header div,
    .grid-element {
        padding: 0.8rem;
    }

    .grid-button, .space {
        display: none;
    } 
}

/* Adattamenti per dispositivi molto piccoli */
@media (max-width: 480px) {
    
    .grid{
        height: 50vh;
    }

    .links-header{
        grid-template-columns: 10% 75% 10%;
        font-size: 0.8rem;
    }
    
    .links-grid {
        grid-template-columns: 15% 80%;
        gap: 0.3rem;
        font-size: 0.8rem;
        padding: 0.5rem 0 0.5rem;
    }

    .grid-button {
        width: 25px;
        height: 25px;
        font-size: 0.7rem;
    }

    .links-header div,
    .grid-element {
        padding: 0.5rem;
    }

    #hidden {
        display: none;
    }
}

